--- a/desafio05/bio.html
+++ b/desafio05/bio.html
@@ -1,11 +1,34 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
 </head>
+
 <body>
-    
+    <header>
+        <h1>
+            <a href="#">Alexandre Costa</a>
+        </h1>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Biografia</a>
+            <a href="projetos.html">Projetos</a>
+        </nav>
+    </header>
+    <main>
+        <h2>Olá,Eu sou o Alexandre-dev</h2>
+        <div>
+            <p>Ola, me chamo Alexandre Costa da Silva nasci em São Gonçalo do Amarante no RN Brasil me interessei na
+                linguagem de progamação por causa do meu tio Bruno.</p>
+                <p>
+                    Tenho 11 anos mais me interesso muito por essa linguagem fantastica e pretendo usa-la para criar sites fanticos muito obrigado <a
+                    href="https://brunos-dev-sigma.vercel.app/">Bruno santos.</a>
+                </p>
+        </div>
+    </main>
 </body>
+
 </html>
