--- a/desafio05/bio.html
+++ b/desafio05/bio.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
+    <style>
+        a {
+            color: black;
+            text-decoration: none;
+        }
+    </style>
 </head>
 
 <body>
@@ -23,10 +29,10 @@
         <div>
             <p>Ola, me chamo Alexandre Costa da Silva nasci em São Gonçalo do Amarante no RN Brasil me interessei na
                 linguagem de progamação por causa do meu tio Bruno.</p>
-                <p>
-                    Tenho 11 anos mais me interesso muito por essa linguagem fantastica e pretendo usa-la para criar sites fanticos muito obrigado <a
-                    href="https://brunos-dev-sigma.vercel.app/">Bruno santos.</a>
-                </p>
+            <p>
+                Tenho 11 anos mais me interesso muito por essa linguagem fantastica e pretendo usa-la para criar sites
+                fanticos muito obrigado <a href="https://brunos-dev-sigma.vercel.app/">Bruno santos.</a>
+            </p>
         </div>
     </main>
 </body>
