--- a/desafio05/bio.html
+++ b/desafio05/bio.html
@@ -6,14 +6,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meu primeiro site</title>
     <style>
-        a {
+         a{
             color: black;
             text-decoration: none;
         }
+       
+      #p1{
+        color:black;
+      }
+        
     </style>
 </head>
 
 <body>
+    <h1>home</h1>
     <header>
         <h1>
             <a href="#">Alexandre Costa</a>
@@ -35,6 +41,9 @@
             </p>
         </div>
     </main>
+    <footer>
+        <P id="p1"><a href="projetos.html">veja meus projetos</a></P>
+    </footer>
 </body>
 
 </html>
